[package]
name = "png2webp"
version = "1.0.0"
edition = "2021"
description = "A simple WASM library designed to convert PNG images to WebP format."
license = "MIT"
repository = "https://github.com/Kynson/png2webp"
authors = ["Kynson Szetau (https://kynsonszetau.com/)"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.91"
image = { version = "0.24.9", features = ["png", "webp"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.41"

[lib]
crate-type = ["cdylib", "rlib"]